--- a/css/stlye.css
+++ b/css/stlye.css
@@ -7,15 +7,21 @@ body {
     background-image: url('../img/emilia-home.jpg');
     background-position: right;
     background-repeat: no-repeat;
-    background-size: 1100px 700px;
-    background-position-x: 400px;
-    background-position-y: 5px;
+    background-size: 1100px 680px;
+    background-position-x: 365px;
+    background-position-y: -20px;
 }
 
-.Titulo-principal {
+.titulo {
     font-family: 'Raleway';
-    font-size: 30px;
+    font-size: 400%;
+    position: relative;
+    top: -100px;
+    background-position-x: 100px;
+    background-position-y: 50px;
     background-color: rgba(255, 255, 255, 0.5);
+    width: 100;
+    height: 75px;
 }
 
 h2 {
