--- a/css/stlye.css
+++ b/css/stlye.css
@@ -1,9 +1,5 @@
-.iconos {
-    text-align: left;
-}
-
 body {
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     background-image: url('../img/emilia-home.jpg');
     background-position: right;
     background-repeat: no-repeat;
@@ -12,16 +8,28 @@ body {
     background-position-y: -20px;
 }
 
+.iconos {
+    margin-left: 6vh;
+    margin-bottom: 15vh;
+}
+
+#enlaces {
+    list-style: none;
+}
+
+#emilia-cole {
+    font-family: 'Raleway', sans-serif;
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 3vw;
+    margin-left: 6vh;
+    position: relative;
+    height: 30vh;
+}
+
 .titulo {
     font-family: 'Raleway';
     font-size: 400%;
-    position: relative;
-    top: -100px;
-    background-position-x: 100px;
-    background-position-y: 50px;
     background-color: rgba(255, 255, 255, 0.5);
-    width: 100;
-    height: 75px;
 }
 
 h2 {
